--- a/Chicofgo_react_main/package.json
+++ b/Chicofgo_react_main/package.json
@@ -10,17 +10,17 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-scripts-ts": "^3.1.0",
-
     "sass": "^1.57.1",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
