--- a/Chicofgo_react_main/package.json
+++ b/Chicofgo_react_main/package.json
@@ -17,8 +17,9 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-scripts-ts": "^3.1.0",
+    "react-slick": "^0.29.0",
     "sass": "^1.57.1",
-    "swiper": "^8.4.6",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
