--- a/Chicofgo_react_main/package.json
+++ b/Chicofgo_react_main/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-credit-cards-2": "^0.9.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
